tests/fixtures/LatestTests/VariableDeclarationTests/errors/assignment_type_mismatch_int64_to_int8.fg
/; EXPECT_ERROR: AssignmentExpressionTypeMismatch
var x:int8 = 5
x = 10000000000l

